--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -547,104 +547,174 @@ body {
         // Load tasks for a specific date
 
         async function loadTasksForDate(selectedDate) {
-    const adminEmail = localStorage.getItem("currentAdminEmail");
-    const userEmail = localStorage.getItem("currentUserEmail");
-    if (!adminEmail || !userEmail) {
-        document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No admin or user email found 🌙</div>`;
-        return;
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  if (!adminEmail) {
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No admin email found 🌙</div>`;
+    return;
+  }
+
+  try {
+    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+    if (!response.ok) throw new Error(`HTTP error ${response.status}`);
+    const result = await response.json();
+    const tasks = result.tasks || [];
+
+    console.log("Fetched tasks, users for Task1:", tasks.find(t => t.title === "Task1")?.users);
+
+    const taskList = document.getElementById("taskList");
+    taskList.innerHTML = "";
+
+    function parseLocalDate(dateStr) {
+      if (!dateStr) return new Date(3000, 0, 1);
+      const [year, month, day] = dateStr.split("-").map(Number);
+      return new Date(year, month - 1, day);
     }
 
-    try {
-        const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&userEmail=${encodeURIComponent(userEmail)}&selectedDate=${selectedDate}&t=${Date.now()}`, { cache: "no-store" });
-        if (!response.ok) throw new Error(`HTTP error ${response.status}`);
-        const result = await response.json();
-        const tasks = result.tasks || [];
+    const selected = parseLocalDate(selectedDate);
+    const today = new Date();
+    today.setHours(0, 0, 0, 0);
 
-        console.log("Fetched tasks, users for Task1:", tasks.find(t => t.title === "Task1")?.users);
+    const visibleTasks = tasks.filter(task => {
+      if (!task.date) return false;
+      const range = task.date.split(" to ");
+      const from = parseLocalDate(range[0]);
+      const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+      return selected >= from && selected <= to;
+    });
 
-        const taskList = document.getElementById("taskList");
-        taskList.innerHTML = "";
-
-        function parseLocalDate(dateStr) {
-            if (!dateStr) return new Date(3000, 0, 1);
-            const [year, month, day] = dateStr.split("-").map(Number);
-            return new Date(year, month - 1, day);
-        }
-
-        const selected = parseLocalDate(selectedDate);
-        const visibleTasks = tasks.filter(task => {
-            if (!task.date) return false;
-            const range = task.date.split(" to ");
-            const from = parseLocalDate(range[0]);
-            const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-            return selected >= from && selected <= to && task.users.includes(userEmail);
-        });
-
-        if (visibleTasks.length === 0) {
-            taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
-            return;
-        }
-
-        visibleTasks.forEach((task) => {
-            const taskDiv = document.createElement("div");
-            taskDiv.className = "task-item";
-            taskDiv.dataset.taskTitle = task.title;
-            taskDiv.dataset.taskDate = task.date;
-
-            const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
-            const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                               task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                               task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-            const tempTurnReplacement = task.tempTurnReplacement?.[selectedDate] || {};
-            const assignedUsers = [...userOrder];
-            Object.entries(tempTurnReplacement).forEach(([index, user]) => {
-                assignedUsers[parseInt(index)] = user;
-            });
-
-            const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-            const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
-            const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
-            const completedCount = allCompletedUsers.length;
-            const completedSet = new Set(allCompletedUsers);
-
-            let currentTurnIndex = task.currentTurnIndex || 0;
-            let currentTurn = assignedUsers[currentTurnIndex] || "All done!";
-            let nextUser = completedCount < repeatLimit ? assignedUsers[(currentTurnIndex + 1) % assignedUsers.length] || "—" : "—";
-            const isCompleted = completedCount >= repeatLimit;
-
-            taskDiv.innerHTML = `
-                <strong>${task.title}</strong><br>
-                Turn: ${currentTurn}<br>
-                Next: ${nextUser}<br>
-                Completed: ${completedCount}/${repeatLimit}<br>
-                ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
-                <button class="delete-btn">Delete</button>
-            `;
-
-            taskDiv.addEventListener("click", async (e) => {
-                if (!e.target.classList.contains("delete-btn")) {
-                    const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
-                    const latestResult = await latest.json();
-                    const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
-                    if (latestTask) showTaskDetails(latestTask, userEmail, selectedDate);
-                }
-            });
-
-            taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-                if (confirm("Are you sure you want to delete this task?")) {
-                    await deleteTaskFromBackend(task.title, task.date);
-                    loadTasksForDate(selectedDate);
-                }
-            });
-
-            taskList.appendChild(taskDiv);
-            enableSwipeToDelete(taskDiv);
-        });
-    } catch (err) {
-        console.error("Error loading tasks:", err);
-        document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
+    if (visibleTasks.length === 0) {
+      taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+      return;
     }
+
+    visibleTasks.forEach((task) => {
+      const taskDiv = document.createElement("div");
+      taskDiv.className = "task-item";
+      taskDiv.dataset.taskTitle = task.title;
+      taskDiv.dataset.taskDate = task.date;
+
+      const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
+      const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+      const tempTurnReplacement = task.tempTurnReplacement?.[selectedDate] || {};
+      const assignedUsers = [...userOrder];
+      Object.entries(tempTurnReplacement).forEach(([index, user]) => {
+        assignedUsers[parseInt(index)] = user;
+      });
+
+      let currentTurn = null;
+      let nextUser = null;
+      let completedCount = 0;
+
+      const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+      const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
+      const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
+      const completedSet = new Set(allCompletedUsers);
+      completedCount = allCompletedUsers.length;
+
+      let lastTurnUser = task.turn || (userOrder.length > 0 ? userOrder[0] : null);
+      let lastTurnDate = parseLocalDate(task.date ? task.date.split(" to ")[0] : null);
+
+      if (task.completions) {
+        const completionDates = Object.keys(task.completions)
+          .filter(date => parseLocalDate(date) < today)
+          .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
+        if (completionDates.length > 0) {
+          lastTurnDate = parseLocalDate(completionDates[0]);
+          const lastCompletions = task.completions[completionDates[0]];
+          if (lastCompletions.length > 0) {
+            lastTurnUser = lastCompletions[lastCompletions.length - 1];
+          }
+        }
+      }
+
+      const daysDiff = Math.floor((selected - lastTurnDate) / (1000 * 60 * 60 * 24));
+      let currentIndex = assignedUsers.indexOf(lastTurnUser);
+      if (currentIndex === -1) currentIndex = 0;
+
+      if (selected < today) {
+        for (let i = 0; i < assignedUsers.length; i++) {
+          if (!completedSet.has(assignedUsers[i])) {
+            currentTurn = assignedUsers[i];
+            break;
+          }
+        }
+        if (currentTurn) {
+          const currentIndex = assignedUsers.indexOf(currentTurn);
+          for (let i = currentIndex + 1; i < assignedUsers.length; i++) {
+            if (!completedSet.has(assignedUsers[i])) {
+              nextUser = assignedUsers[i];
+              break;
+            }
+          }
+        }
+      } else if (selected.getTime() === today.getTime()) {
+        const totalCompletionsSoFar = daysDiff * repeatLimit;
+        let predictedIndex = (currentIndex + totalCompletionsSoFar) % assignedUsers.length;
+
+        let tempIndex = predictedIndex;
+        let completionsCounted = completedCount;
+        while (completionsCounted > 0 && assignedUsers.length > 0) {
+          if (completedSet.has(assignedUsers[tempIndex])) {
+            completionsCounted--;
+          }
+          tempIndex = (tempIndex + 1) % assignedUsers.length;
+        }
+
+        currentTurn = assignedUsers[tempIndex];
+
+        if (currentTurn && completedCount < repeatLimit) {
+          nextUser = assignedUsers[(tempIndex + 1) % assignedUsers.length];
+        } else {
+          nextUser = "—";
+        }
+      } else {
+        const totalCompletions = daysDiff * repeatLimit;
+        currentIndex = (currentIndex + totalCompletions) % assignedUsers.length;
+        currentTurn = assignedUsers[currentIndex];
+        nextUser = assignedUsers[(currentIndex + 1) % assignedUsers.length];
+      }
+
+      currentTurn = currentTurn || "All done!";
+      nextUser = nextUser || "—";
+      const isCompleted = completedCount >= repeatLimit;
+
+      taskDiv.innerHTML = `
+        <strong>${task.title}</strong><br>
+        Turn: ${currentTurn}<br>
+        Next: ${nextUser}<br>
+        Completed: ${completedCount}/${repeatLimit}<br>
+        ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
+        <button class="delete-btn">Delete</button>
+      `;
+
+      taskDiv.addEventListener("click", async (e) => {
+        if (!e.target.classList.contains("delete-btn")) {
+          const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+          const latestResult = await latest.json();
+          const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
+          if (latestTask) showTaskDetails(latestTask);
+        }
+      });
+
+      taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+        if (confirm("Are you sure you want to delete this task?")) {
+          await deleteTaskFromBackend(task.title, task.date);
+          loadTasksForDate(selectedDate);
+        }
+      });
+
+      taskList.appendChild(taskDiv);
+      enableSwipeToDelete(taskDiv);
+    });
+  } catch (err) {
+    console.error("Error loading tasks:", err);
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
+  }
 }
+
+
 
 
 
