--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -544,191 +544,14 @@ body {
 
 
 
-        // Load tasks for a specific date
-
-        async function loadTasksForDate(selectedDate) {
-  const adminEmail = localStorage.getItem("currentAdminEmail");
-  if (!adminEmail) {
-    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No admin email found 🌙</div>`;
-    return;
-  }
-
-  try {
-    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
-    if (!response.ok) throw new Error(`HTTP error ${response.status}`);
-    const result = await response.json();
-    const tasks = result.tasks || [];
-
-    console.log("Fetched tasks, users for Task1:", tasks.find(t => t.title === "Task1")?.users); // Debug
-
-    const taskList = document.getElementById("taskList");
-    taskList.innerHTML = "";
-
-    function parseLocalDate(dateStr) {
-      if (!dateStr) return new Date(3000, 0, 1);
-      const [year, month, day] = dateStr.split("-").map(Number);
-      return new Date(year, month - 1, day);
-    }
-
-    const selected = parseLocalDate(selectedDate);
-    const today = new Date();
-    today.setHours(0, 0, 0, 0);
-
-    const visibleTasks = tasks.filter(task => {
-      if (!task.date) return false;
-      const range = task.date.split(" to ");
-      const from = parseLocalDate(range[0]);
-      const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-      return selected >= from && selected <= to;
-    });
-
-    if (visibleTasks.length === 0) {
-      taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
-      return;
-    }
-
-    visibleTasks.forEach((task) => {
-      const taskDiv = document.createElement("div");
-      taskDiv.className = "task-item";
-      taskDiv.dataset.taskTitle = task.title;
-      taskDiv.dataset.taskDate = task.date;
-
-      const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
-      const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-      const tempTurnReplacement = task.tempTurnReplacement?.[selectedDate] || {};
-      const assignedUsers = [...userOrder];
-      Object.entries(tempTurnReplacement).forEach(([index, user]) => {
-        assignedUsers[parseInt(index)] = user;
-      });
-
-      let currentTurn = null;
-      let nextUser = null;
-      let completedCount = 0;
-
-      const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-      const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
-      const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
-      const completedSet = new Set(allCompletedUsers);
-      completedCount = allCompletedUsers.length;
-
-      let lastTurnUser = task.turn || (userOrder.length > 0 ? userOrder[0] : null);
-      let lastTurnDate = parseLocalDate(task.date ? task.date.split(" to ")[0] : null);
-
-      if (task.completions) {
-        const completionDates = Object.keys(task.completions)
-          .filter(date => parseLocalDate(date) < selected) // Use selected, not today
-          .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
-        if (completionDates.length > 0) {
-          lastTurnDate = parseLocalDate(completionDates[0]);
-          const lastCompletions = task.completions[completionDates[0]];
-          if (lastCompletions.length > 0) {
-            lastTurnUser = lastCompletions[lastCompletions.length - 1];
-          }
-        }
-      }
-
-      console.log(`Task ${task.title}: userOrder=${userOrder}, lastTurnUser=${lastTurnUser}, lastTurnDate=${lastTurnDate}, selectedDate=${selectedDate}, completedUsers=${allCompletedUsers}`); // Debug
-
-      let currentIndex = assignedUsers.indexOf(lastTurnUser);
-      if (currentIndex === -1) currentIndex = 0;
-
-      if (selected < today) {
-        for (let i = 0; i < assignedUsers.length; i++) {
-          if (!completedSet.has(assignedUsers[i])) {
-            currentTurn = assignedUsers[i];
-            break;
-          }
-        }
-        if (currentTurn) {
-          const currentIndex = assignedUsers.indexOf(currentTurn);
-          for (let i = currentIndex + 1; i < assignedUsers.length; i++) {
-            if (!completedSet.has(assignedUsers[i])) {
-              nextUser = assignedUsers[i];
-              break;
-            }
-          }
-        }
-      } else {
-        // Align with showTaskDetails: Find next non-completed user
-        for (let i = 0; i < assignedUsers.length; i++) {
-          if (!completedSet.has(assignedUsers[(currentIndex + i) % assignedUsers.length])) {
-            currentTurn = assignedUsers[(currentIndex + i) % assignedUsers.length];
-            break;
-          }
-        }
-        if (currentTurn) {
-          const currentIndex = assignedUsers.indexOf(currentTurn);
-          for (let i = currentIndex + 1; i < assignedUsers.length; i++) {
-            if (!completedSet.has(assignedUsers[i])) {
-              nextUser = assignedUsers[i];
-              break;
-            }
-          }
-          if (!nextUser && completedCount < repeatLimit) {
-            for (let i = 0; i < assignedUsers.length; i++) {
-              if (!completedSet.has(assignedUsers[i])) {
-                nextUser = assignedUsers[i];
-                break;
-              }
-            }
-          }
-        }
-      }
-
-      currentTurn = currentTurn || "All done!";
-      nextUser = nextUser || "—";
-      const isCompleted = completedCount >= repeatLimit;
-
-      console.log(`Task ${task.title}: currentTurn=${currentTurn}, nextUser=${nextUser}, completedCount=${completedCount}/${repeatLimit}`); // Debug
-
-      taskDiv.innerHTML = `
-        <strong>${task.title}</strong><br>
-        Turn: ${currentTurn}<br>
-        Next: ${nextUser}<br>
-        Completed: ${completedCount}/${repeatLimit}<br>
-        ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
-        <button class="delete-btn">Delete</button>
-      `;
-
-      taskDiv.addEventListener("click", async (e) => {
-        if (!e.target.classList.contains("delete-btn")) {
-          const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
-          const latestResult = await latest.json();
-          const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
-          if (latestTask) showTaskDetails(latestTask);
-        }
-      });
-
-      taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-        if (confirm("Are you sure you want to delete this task?")) {
-          await deleteTaskFromBackend(task.title, task.date);
-          loadTasksForDate(selectedDate);
-        }
-      });
-
-      taskList.appendChild(taskDiv);
-      enableSwipeToDelete(taskDiv);
-    });
-  } catch (err) {
-    console.error("Error loading tasks:", err);
-    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
-  }
-}
 
 
 
-async function showTaskDetails(task) {
-  const selectedDate = document.querySelector(".day.selected")?.dataset.date;
-  if (!selectedDate) return;
-
+        function calculateTurn(task, selectedDate) {
   const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
-  console.log("Task details, userOrder:", userOrder);
-
   const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                      task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                      task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+                     task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                     task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
   const tempTurnReplacement = task.tempTurnReplacement?.[selectedDate] || {};
   const assignedUsers = [...userOrder];
   Object.entries(tempTurnReplacement).forEach(([index, user]) => {
@@ -819,8 +642,113 @@ async function showTaskDetails(task) {
     nextUser = assignedUsers[(currentIndex + 1) % assignedUsers.length];
   }
 
-  currentTurn = currentTurn || "All done!";
-  nextUser = nextUser || "—";
+  return {
+    currentTurn: currentTurn || "All done!",
+    nextUser: nextUser || "—",
+    completedCount,
+    repeatLimit
+  };
+}
+
+        // Load tasks for a specific date
+
+        async function loadTasksForDate(selectedDate) {
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  if (!adminEmail) {
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No admin email found 🌙</div>`;
+    return;
+  }
+
+  try {
+    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+    if (!response.ok) throw new Error(`HTTP error ${response.status}`);
+    const result = await response.json();
+    const tasks = result.tasks || [];
+
+    console.log("Fetched tasks, users for Task1:", tasks.find(t => t.title === "Task1")?.users);
+
+    const taskList = document.getElementById("taskList");
+    taskList.innerHTML = "";
+
+    function parseLocalDate(dateStr) {
+      if (!dateStr) return new Date(3000, 0, 1);
+      const [year, month, day] = dateStr.split("-").map(Number);
+      return new Date(year, month - 1, day);
+    }
+
+    const selected = parseLocalDate(selectedDate);
+    const today = new Date();
+    today.setHours(0, 0, 0, 0);
+
+    const visibleTasks = tasks.filter(task => {
+      if (!task.date) return false;
+      const range = task.date.split(" to ");
+      const from = parseLocalDate(range[0]);
+      const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+      return selected >= from && selected <= to;
+    });
+
+    if (visibleTasks.length === 0) {
+      taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+      return;
+    }
+
+    visibleTasks.forEach((task) => {
+      const taskDiv = document.createElement("div");
+      taskDiv.className = "task-item";
+      taskDiv.dataset.taskTitle = task.title;
+      taskDiv.dataset.taskDate = task.date;
+
+      const { currentTurn, nextUser, completedCount, repeatLimit } = calculateTurn(task, selectedDate);
+      const isCompleted = completedCount >= repeatLimit;
+
+      taskDiv.innerHTML = `
+        <strong>${task.title}</strong><br>
+        Turn: ${currentTurn}<br>
+        Next: ${nextUser}<br>
+        Completed: ${completedCount}/${repeatLimit}<br>
+        ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
+        <button class="delete-btn">Delete</button>
+      `;
+
+      taskDiv.addEventListener("click", async (e) => {
+        if (!e.target.classList.contains("delete-btn")) {
+          const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+          const latestResult = await latest.json();
+          const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
+          if (latestTask) showTaskDetails(latestTask);
+        }
+      });
+
+      taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+        if (confirm("Are you sure you want to delete this task?")) {
+          await deleteTaskFromBackend(task.title, task.date);
+          loadTasksForDate(selectedDate);
+        }
+      });
+
+      taskList.appendChild(taskDiv);
+      enableSwipeToDelete(taskDiv);
+    });
+  } catch (err) {
+    console.error("Error loading tasks:", err);
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
+  }
+}
+
+
+
+async function showTaskDetails(task) {
+  const selectedDate = document.querySelector(".day.selected")?.dataset.date;
+  if (!selectedDate) return;
+
+  const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
+  console.log("Task details, userOrder:", userOrder);
+
+  const { currentTurn, nextUser, completedCount, repeatLimit } = calculateTurn(task, selectedDate);
+  const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+  const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
+  const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
 
   let taskDetails = `
     <strong>Title:</strong> ${task.title}<br>
@@ -883,10 +811,6 @@ async function showTaskDetails(task) {
     });
   }
 }
-
-
-
-
 
 
 
