--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -75,29 +75,7 @@ body {
     align-items: center;
 }
 
-        .user-list {
-            list-style: none;
-            padding: 0;
-            width: 90%;
-            max-width: 500px;
-        }
-        .user-list-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #2A2B32; /* dark card */
-    padding: 15px;
-    margin: 10px 0;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: 2px solid var(--border-dark); /* dark subtle border */
-    color: var(--text-color);
-}
-        .user-list-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
-        }
+
         .remove-user-btn {
             background: var(--secondary-color);
             color: var(--primary-color);
@@ -370,10 +348,13 @@ body {
       </div>
       
 
-    <div class="content">
-        <ul class="user-list" id="userList">
-            <!-- Users will be added here dynamically -->
-        </ul>
+      <div class="content">
+        <div id="noUsersMessage" style="display: none; text-align: center; color: var(--text-color); font-size: 16px;">
+            Press + to create a new user
+        </div>
+        <select id="userDropdown" style="width: 90%; max-width: 500px; padding: 10px; font-size: 16px; border-radius: 8px; background: #2A2B32; color: var(--text-color); border: 2px solid var(--border-dark);">
+            <option value="" disabled selected>Select User</option>
+        </select>
     </div>
 
     <div class="modal" id="addUserModal">
