--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -335,6 +335,41 @@ body {
 
 
 
+
+
+
+.manage-members-list {
+    list-style: none;
+    padding: 0;
+    max-height: 300px;
+    overflow-y: auto;
+    margin-bottom: 15px;
+}
+.manage-members-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 5px 0;
+    background: var(--accent-color);
+    border: 1px solid var(--border-dark);
+    border-radius: 8px;
+}
+.manage-members-item span {
+    flex: 1;
+    margin-right: 10px;
+    font-size: 14px;
+}
+.manage-members-item select {
+    padding: 8px;
+    border: 1px solid var(--border-dark);
+    border-radius: 5px;
+    font-size: 14px;
+    background: var(--accent-color);
+    color: var(--text-color);
+    cursor: pointer;
+}
+
     </style>
 </head>
 <body>
@@ -355,6 +390,7 @@ body {
         <select id="userDropdown" style="width: 90%; max-width: 500px; padding: 10px; font-size: 16px; border-radius: 8px; background: #2A2B32; color: var(--text-color); border: 2px solid var(--border-dark);">
             <option value="" disabled selected>Select User</option>
         </select>
+        <button id="managePermissionsBtn" class="action-btn" style="display: none; width: 90%; max-width: 500px; padding: 10px; margin-top: 15px; font-size: 16px; border-radius: 8px; background: var(--primary-color); color: var(--secondary-color); border: 2px solid var(--border-dark); font-weight: 600;">Manage Permissions</button>
     </div>
 
     <div class="modal" id="addUserModal">
@@ -378,17 +414,17 @@ body {
 </div>
 
 
-<div class="modal" id="permissionModal">
+
+  <!-- Modal for Managing Permissions -->
+<div class="modal" id="managePermissionsModal">
     <div class="modal-content">
-      <h3>Edit Permissions</h3>
-      <p id="permissionModalUser" style="margin-bottom: 10px;"></p>
-      <select id="permissionSelect" style="width: 100%; padding: 10px; font-size: 16px; border-radius: 8px; margin-bottom: 20px;">
-        <option value="User">User</option>
-        <option value="Admin">Admin</option>
-      </select>
-      <button id="savePermissionBtn">Save</button>
+        <h3>Manage Permissions</h3>
+        <ul class="manage-members-list" id="managePermissionsList">
+            <!-- Permissions will be loaded here dynamically -->
+        </ul>
+        <button class="action-btn" onclick="document.getElementById('managePermissionsModal').classList.remove('show')">Close</button>
     </div>
-  </div>
+</div>
   
 
 
