--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -346,7 +346,7 @@ body {
 }
 .manage-members-item {
     display: grid;
-    grid-template-columns: 2fr 1.2fr 1fr; /* Slightly more space for dropdown */
+    grid-template-columns: 2fr 1.3fr 1fr; /* More space for dropdown */
     align-items: center;
     gap: 15px;
     padding: 15px;
