--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -369,7 +369,7 @@ body {
     color: var(--text-color);
     cursor: pointer;
     width: 100%;
-    min-width: 80px; /* Ensure enough space for "Admin" */
+    min-width: 90px; /* Increased for "Admin" */
 }
 .manage-members-item .delete-btn {
     padding: 10px;
