--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -75,7 +75,29 @@ body {
     align-items: center;
 }
 
-
+        .user-list {
+            list-style: none;
+            padding: 0;
+            width: 90%;
+            max-width: 500px;
+        }
+        .user-list-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #2A2B32; /* dark card */
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: 2px solid var(--border-dark); /* dark subtle border */
+    color: var(--text-color);
+}
+        .user-list-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+        }
         .remove-user-btn {
             background: var(--secondary-color);
             color: var(--primary-color);
@@ -163,17 +185,17 @@ body {
             font-weight: 600;
         }
         .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--modal-bg);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Default for other modals */
-}
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--modal-bg);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
         .modal.show {
             display: flex;
             animation: fadeIn 0.3s ease-out;
@@ -335,66 +357,6 @@ body {
 
 
 
-
-
-.manage-members-list {
-    list-style: none;
-    padding: 0;
-    max-height: 300px;
-    overflow-y: auto;
-    margin-bottom: 20px;
-}
-.manage-members-item {
-    display: grid;
-    grid-template-columns: 2fr 1.3fr 1fr; /* More space for dropdown */
-    align-items: center;
-    gap: 15px;
-    padding: 15px;
-    margin: 8px 0;
-    background: var(--accent-color);
-    border: 1px solid var(--border-dark);
-    border-radius: 8px;
-}
-.manage-members-item span {
-    font-size: 16px;
-    font-weight: 500;
-    text-align: left;
-}
-.manage-members-item select {
-    padding: 10px 12px;
-    border: 1px solid var(--border-dark);
-    border-radius: 5px;
-    font-size: 14px;
-    background: var(--accent-color);
-    color: var(--text-color);
-    cursor: pointer;
-    width: 100%;
-    min-width: 90px; /* Increased for "Admin" */
-}
-.manage-members-item .delete-btn {
-    padding: 10px;
-    background: var(--danger-color);
-    color: var(--text-color);
-    border: none;
-    border-radius: 5px;
-    font-size: 14px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    width: 100%;
-}
-.manage-members-item .delete-btn:hover {
-    background: #B71C1C;
-    transform: scale(1.05);
-}
-
-
-
-
-
-#confirmModal {
-    z-index: 1100; /* Higher than other modals (1000) */
-}
     </style>
 </head>
 <body>
@@ -408,14 +370,10 @@ body {
       </div>
       
 
-      <div class="content">
-        <div id="noUsersMessage" style="display: none; text-align: center; color: var(--text-color); font-size: 16px;">
-            Press + to create a new user
-        </div>
-        <select id="userDropdown" style="width: 90%; max-width: 500px; padding: 10px; font-size: 16px; border-radius: 8px; background: #2A2B32; color: var(--text-color); border: 2px solid var(--border-dark);">
-            <option value="" disabled selected>Select User</option>
-        </select>
-        <button id="userManagementBtn" class="action-btn" style="display: none; width: 90%; max-width: 500px; padding: 10px; margin-top: 15px; font-size: 16px; border-radius: 8px; background: var(--primary-color); color: var(--secondary-color); border: 2px solid var(--border-dark); font-weight: 600;">User Management</button>
+    <div class="content">
+        <ul class="user-list" id="userList">
+            <!-- Users will be added here dynamically -->
+        </ul>
     </div>
 
     <div class="modal" id="addUserModal">
@@ -439,17 +397,17 @@ body {
 </div>
 
 
-
-<!-- Modal for User Management -->
-<div class="modal" id="userManagementModal">
+<div class="modal" id="permissionModal">
     <div class="modal-content">
-        <h3>User Management</h3>
-        <ul class="manage-members-list" id="userManagementList">
-            <!-- Users and permissions will be loaded here dynamically -->
-        </ul>
-        <button class="action-btn" onclick="document.getElementById('userManagementModal').classList.remove('show')">Close</button>
+      <h3>Edit Permissions</h3>
+      <p id="permissionModalUser" style="margin-bottom: 10px;"></p>
+      <select id="permissionSelect" style="width: 100%; padding: 10px; font-size: 16px; border-radius: 8px; margin-bottom: 20px;">
+        <option value="User">User</option>
+        <option value="Admin">Admin</option>
+      </select>
+      <button id="savePermissionBtn">Save</button>
     </div>
-</div>
+  </div>
   
 
 
