restore home / useradmin footer corrected

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -268,15 +268,23 @@
 
 
   <div class="footer">
-    <a id="homeFooterLink" class="footer-icon" href="/BeeMazing-Y1/mobile/1-Home/home.html" aria-label="Home">
-
+    <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
         <span>Home</span>
     </a>
-    <a href="#" id="profileButton" class="footer-icon" href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" aria-label="Profile">
+    <a href="/BeeMazing-Y1/mobile/2-UserProfiles/users.html" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
         <span>Profile</span>
     </a>
+    <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
+        <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+        <span>Market</span>
+    </a>
+    <a href="#" id="rewardsButton" class="footer-icon" aria-label="Rewards">
+        <img src="/BeeMazing-Y1/mobile/1-Home/RewardsBtn.png" alt="Rewards" />
+        <span>Rewards</span>
+    </a>
+</div>
 
 
 
