--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -355,7 +355,9 @@ body {
     font-weight: bold;
 }
 
-
+#permissionSelect {
+    min-width: 90px; /* Prevent "Admin" truncation */
+}
 
     </style>
 </head>
@@ -448,6 +450,6 @@ body {
     
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <script src="/BeeMazing-Y1/web/1-Home/home.js"></script>
+    <script src="/BeeMazing-Y1/mobile/1-Home/home.js"></script>
 </body>
 </html>
